--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>18</maven.compiler.source>
+    <maven.compiler.target>18</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -38,13 +40,19 @@
 
   <build>
     <plugins>
+<!--      <plugin>-->
+<!--        <artifactId>maven-compiler-plugin</artifactId>-->
+<!--        <version>3.8.0</version>-->
+<!--        <configuration>-->
+<!--          <source>1.11</source>-->
+<!--          <target>1.11</target>-->
+<!--        </configuration>-->
+<!--      </plugin>-->
+
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
-        <configuration>
-          <source>1.11</source>
-          <target>1.11</target>
-        </configuration>
+        <version>3.8.1</version>
       </plugin>
 
       <plugin>
